fix: resolve terminal command rendering issue in docs

--- a/apps/docs/content/docs/cli/index.mdx
+++ b/apps/docs/content/docs/cli/index.mdx
@@ -16,9 +16,21 @@ The Better Webhook CLI is a local development tool for capturing, replaying, and
 Install the CLI globally:
 
 <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
-  <Tab value="npm">```bash npm install -g @better-webhook/cli ```</Tab>
-  <Tab value="pnpm">```bash pnpm add -g @better-webhook/cli ```</Tab>
-  <Tab value="yarn">```bash yarn global add @better-webhook/cli ```</Tab>
+  <Tab value="npm">
+  ```bash
+  npm install -g @better-webhook/cli
+  ```
+  </Tab>
+  <Tab value="pnpm">
+  ```bash
+  pnpm add -g @better-webhook/cli
+  ```
+  </Tab>
+  <Tab value="yarn">
+  ```bash
+  yarn global add @better-webhook/cli
+  ```
+  </Tab>
 </Tabs>
 
 Verify the installation:
