--- a/apps/docs/content/docs/sdk/providers.mdx
+++ b/apps/docs/content/docs/sdk/providers.mdx
@@ -13,9 +13,21 @@ Providers define the webhook source, including event types, payload schemas, and
 ## GitHub
 
 <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
-  <Tab value="npm">```bash npm install @better-webhook/github ```</Tab>
-  <Tab value="pnpm">```bash pnpm add @better-webhook/github ```</Tab>
-  <Tab value="yarn">```bash yarn add @better-webhook/github ```</Tab>
+  <Tab value="npm">
+  ```bash
+  npm install @better-webhook/github
+  ```
+  </Tab>
+  <Tab value="pnpm">
+  ```bash
+  pnpm add @better-webhook/github
+  ```
+  </Tab>
+  <Tab value="yarn">
+  ```bash
+  yarn add @better-webhook/github
+  ```
+  </Tab>
 </Tabs>
 
 ```ts
@@ -144,9 +156,21 @@ GitHub uses HMAC-SHA256 signatures sent in the `X-Hub-Signature-256` header. The
 ## Ragie
 
 <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
-  <Tab value="npm">```bash npm install @better-webhook/ragie ```</Tab>
-  <Tab value="pnpm">```bash pnpm add @better-webhook/ragie ```</Tab>
-  <Tab value="yarn">```bash yarn add @better-webhook/ragie ```</Tab>
+  <Tab value="npm">
+  ```bash
+  npm install @better-webhook/ragie
+  ```
+  </Tab>
+  <Tab value="pnpm">
+  ```bash
+  pnpm add @better-webhook/ragie
+  ```
+  </Tab>
+  <Tab value="yarn">
+  ```bash
+  yarn add @better-webhook/ragie
+  ```
+  </Tab>
 </Tabs>
 
 ```ts
