--- a/apps/docs/content/docs/sdk/index.mdx
+++ b/apps/docs/content/docs/sdk/index.mdx
@@ -23,53 +23,76 @@ Install a provider and an adapter for your framework:
   <Tab value="Next.js">
     <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
       <Tab value="npm">
-        ```bash npm install @better-webhook/github @better-webhook/nextjs ```
+        ```bash
+        npm install @better-webhook/github @better-webhook/nextjs
+        ```
       </Tab>
       <Tab value="pnpm">
-        ```bash pnpm add @better-webhook/github @better-webhook/nextjs ```
+        ```bash
+        pnpm add @better-webhook/github @better-webhook/nextjs
+        ```
       </Tab>
       <Tab value="yarn">
-        ```bash yarn add @better-webhook/github @better-webhook/nextjs ```
+        ```bash
+        yarn add @better-webhook/github @better-webhook/nextjs
+        ```
       </Tab>
     </Tabs>
   </Tab>
   <Tab value="Express">
     <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
       <Tab value="npm">
-        ```bash npm install @better-webhook/github @better-webhook/express ```
+        ```bash
+        npm install @better-webhook/github @better-webhook/express
+        ```
       </Tab>
       <Tab value="pnpm">
-        ```bash pnpm add @better-webhook/github @better-webhook/express ```
+        ```bash
+        pnpm add @better-webhook/github @better-webhook/express
+        ```
       </Tab>
       <Tab value="yarn">
-        ```bash yarn add @better-webhook/github @better-webhook/express ```
+        ```bash
+        yarn add @better-webhook/github @better-webhook/express 
+        ```
       </Tab>
     </Tabs>
   </Tab>
   <Tab value="NestJS">
     <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
       <Tab value="npm">
-        ```bash npm install @better-webhook/github @better-webhook/nestjs ```
+        ```bash
+        npm install @better-webhook/github @better-webhook/nestjs 
+        ```
       </Tab>
       <Tab value="pnpm">
-        ```bash pnpm add @better-webhook/github @better-webhook/nestjs ```
+        ```bash
+        pnpm add @better-webhook/github @better-webhook/nestjs
+        ```
       </Tab>
       <Tab value="yarn">
-        ```bash yarn add @better-webhook/github @better-webhook/nestjs ```
+        ```bash
+        yarn add @better-webhook/github @better-webhook/nestjs
+        ```
       </Tab>
     </Tabs>
   </Tab>
   <Tab value="GCP Cloud Functions">
     <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
       <Tab value="npm">
-        ```bash npm install @better-webhook/ragie @better-webhook/gcp-functions
+        ```bash
+        npm install @better-webhook/ragie @better-webhook/gcp-functions
         ```
       </Tab>
       <Tab value="pnpm">
-        ```bash pnpm add @better-webhook/ragie @better-webhook/gcp-functions ```
+        ```bash
+        pnpm add @better-webhook/ragie @better-webhook/gcp-functions
+        ```
       </Tab>
       <Tab value="yarn">
-        ```bash yarn add @better-webhook/ragie @better-webhook/gcp-functions ```
+        ```bash
+        yarn add @better-webhook/ragie @better-webhook/gcp-functions
+        ```
       </Tab>
     </Tabs>
   </Tab>
