--- a/apps/docs/content/docs/sdk/index.mdx
+++ b/apps/docs/content/docs/sdk/index.mdx
@@ -12,7 +12,7 @@ import { Callout } from "fumadocs-ui/components/callout";
 The Better Webhook SDK provides type-safe webhook handlers with automatic signature verification. It consists of:
 
 - **Provider packages** — Type definitions and schemas for webhook sources (GitHub, Ragie)
-- **Adapter packages** — Framework integrations (Next.js, Express, NestJS, GCP Cloud Functions, Hono)
+- **Adapter packages** — Framework integrations (Next.js, Hono, Express, NestJS, GCP Cloud Functions)
 - **Core package** — Base functionality for custom providers
 
 ## Installation
