fix: enhance Hono webhook integration and improve TypeScript configuration

--- a/apps/docs/content/docs/sdk/adapters.mdx
+++ b/apps/docs/content/docs/sdk/adapters.mdx
@@ -563,6 +563,9 @@ http(
     observer: stats.observer,
   }),
 );
+
+// Hono
+app.post("/webhooks/github", toHono(webhook, { observer: stats.observer }));
 ```
 
 See the [SDK Getting Started](/docs/sdk) page for more details on observability.
